# depthai

./: .gitignore  README.md  config.yml  main.py  pyproject.toml
src/: __init__.py  cli.py
src/core/: base.py  detector.py  recorder.py
src/oakd_camera/: __init__.py  check_connection.py  oakd_base.py  oakd_object_detection_app.py  oakd_record_and_save_to_file.py  show_video.py  utils.py
src/utils/: config.py  device.py  visualization.py
tests/: conftest.py  test_cli.py  test_core_base.py  test_core_detector.py  test_core_recorder.py  test_utils_config.py  test_utils_device.py
