[project]
name = "oakd-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "depthai>=2.29.0.0",
    "idna>=3.10",
    "loguru>=0.7.3",
    "numpy>=2.2.3",
    "opencv-python==4.11.0.86",
    "pip>=25.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
]
